Introduce complex Successors and Condition instead of int arrays.
Variable.getName() is now used ubiquitously and correctly
(PartedVariable.getName() adjusted accordingly).

GG.Context.fill(): no need to copy and fill, because updateDefaultValue()
already fills missing successors with current node. See b06.vhd, "ackout":
STATE control node precedes CONT_EQL control node.

HC11 FULL and RED greatly reduced in sized and corrected.

--- a/src/logging.properties
+++ b/src/logging.properties
@@ -40,7 +40,7 @@ handlers= java.util.logging.FileHandler
 
 # default file output is in user's home directory.
 #java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.pattern = D:/Documents and Settings/Randy/My Documents/Programming/Java/VertigoInterfaceParsers8/log
+java.util.logging.FileHandler.pattern = D:/Documents and Settings/Randy/My Documents/Programming/Java/VertigoInterfaceParsers9/log
 java.util.logging.FileHandler.append = true
 java.util.logging.FileHandler.limit = 5000000
 java.util.logging.FileHandler.count = 1
@@ -67,3 +67,4 @@ base.vhdl.visitors.VariableNameReplacerImpl.level = FINER
 ui.utils.ConvertingWorker.level = FINE
 base.hldd.structure.variables.utils.DefaultGraphVariableCreator.level = FINE
 parsers.Beh2RtlTransformer.level = FINE
+base.hldd.structure.nodes.utils.Successors.level = FINE
