OS-agnostic AutomaticConverterVerifier and logger, make project dir based

--- a/src/logging.properties
+++ b/src/logging.properties
@@ -40,7 +40,7 @@ handlers= java.util.logging.FileHandler
 
 # default file output is in user's home directory.
 #java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.pattern = D:/Documents and Settings/Randy/My Documents/Programming/Java/VertigoInterfaceParsers9/log
+java.util.logging.FileHandler.pattern = %t/apricotCAD/log
 java.util.logging.FileHandler.append = true
 java.util.logging.FileHandler.limit = 5000000
 java.util.logging.FileHandler.count = 1
